<resources>
    <string name="app_name">Sedora</string>
    <!-- Página de perfil -->
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="contrasena">Contraseña</string>
    <string name="altura">Altura</string>

    <!--Iniciar sesión-->
    <string name="IniciarSesion">Iniciar sesión</string>
    <string name="Email">E-mail</string>
    <string name="contrasenya">Contraseña</string>
    <string name="olvidadoContrasenya">¿Has olvidado tu contraseña?</string>
    <string name="Entrar">Entrar</string>
    <string name="NoTienesUnaCuenta">¿No tienes una cuenta?</string>
    <string name="AccedeCon">- O accede con -</string>
    <string name="Registrate">Regístrate</string>

    <!--Registro-->
    <string name="Registrarse">Registrarse</string>
    <string name="ConfirmContra">Confirmar contraseña</string>
    <string name="HeLeido">He leído y acepto la</string>
    <string name="Polpriv">Política de privacidad</string>
    <string name="flecha_vuelta_desc">Volver</string>

    <!--Metas-->
    <string name="descripcion_imagen_meta">Imagen representativa de la meta</string>


    <!--Popup Informe-->
    <string name="titulo_informe_diario">Informe Diario</string>
    <string name="contenido_informe_diario">Aquí se mostrará tu informe diario.</string>
    <string name="cerrar_popup">Cerrar Popup</string>

</resources>