<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="202dp"
        android:layout_height="277dp"
        app:layout_constraintBottom_toTopOf="@+id/txtIniciarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sedora_logo" />

    <TextView
        android:id="@+id/txtIniciarSesion"
        style="@style/Heading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/IniciarSesion"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="263dp" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/Inputs"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/negro"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#972F2F"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />


    <EditText
        android:id="@+id/edtContraseña"
        style="@style/Inputs"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/contrasenya"
        android:inputType="textPassword"
        android:textColorHint="@color/negro"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <TextView
        android:id="@+id/txtOlvidarContraseña"
        style="@style/ParagraphNegrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/olvidadoContrasenya"
        android:textColor="@color/verde_primario"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/edtContraseña"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edtContraseña"
        app:layout_constraintTop_toTopOf="@+id/tvContraseña" />

    <TextView
        android:id="@+id/tvContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#972F2F"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    <TextView
        android:id="@+id/accedeCon"
        style="@style/ParagraphNegro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/AccedeCon"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btnIniciarSesion"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/btnIniciarSesion"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion" />

    <Button
        android:id="@+id/btnIniciarSesion"
        style="@style/BotonVerde"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:onClick="inicioSesionCorreo"
        android:text="@string/Entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    <TextView
        android:id="@+id/txt"
        style="@style/ParagraphNegro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="64dp"
        android:text="@string/NoTienesUnaCuenta"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/tvRegistrate"
        style="@style/ParagraphNegrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Registrate"
        android:textColor="@color/verde_primario"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/txt"
        app:layout_constraintTop_toTopOf="@+id/txt" />

    <TextView
        android:id="@+id/respuestaLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#972F2F"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txt" />

    <Button
        android:id="@+id/button"
        style="@style/BotonBlanco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnIniciarSesion"
        app:layout_constraintTop_toBottomOf="@+id/accedeCon" />

    <Button
        android:id="@+id/button2"
        style="@style/BotonBlanco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/accedeCon" />

    <Button
        android:id="@+id/button3"
        style="@style/BotonBlanco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/btnIniciarSesion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/accedeCon" />

    <ImageView
        android:id="@+id/logoGoogle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:srcCompat="@drawable/logo_google" />

    <ImageView
        android:id="@+id/logoFacebook"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/logoX"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3"
        app:srcCompat="@drawable/logo_twitter" />

    <!--

    <ImageView
        android:id="@+id/imageViewPasswordToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="14dp"
        android:contentDescription="Mostrar/Ocultar contraseña"
        android:src="@drawable/ic_visibility_eye_off"
        app:layout_constraintStart_toStartOf="@+id/edtContraseña"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    -->


</androidx.constraintlayout.widget.ConstraintLayout>
