<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/registroLayout"
        android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/button_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="TODO"
        android:elevation="4dp"
        android:focusable="true"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icono_flecha"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="246dp"
        android:layout_height="287dp"
        app:layout_constraintBottom_toTopOf="@+id/txtRegistrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sedora_logo" />

    <TextView
        android:id="@+id/txtRegistrarse"
        style="@style/Heading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Registrarse"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="260dp" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/Inputs"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/negro"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#972F2F"
        android:textSize="10dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />


        <EditText
            android:id="@+id/edtContraseña"
            style="@style/Inputs"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/contrasenya"
            android:inputType="textPassword"
            android:textColorHint="@color/negro"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            tools:ignore="TextSizeCheck" />


    <TextView
        android:id="@+id/tvContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:textColor="#972F2F"
        android:textSize="10dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />


        <EditText
            android:id="@+id/edtConfirmContraseña"
            style="@style/Inputs"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/ConfirmContra"
            android:inputType="textPassword"
            android:textColorHint="@color/negro"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtContraseña"
            tools:ignore="TextSizeCheck" />


    <TextView
        android:id="@+id/tvConfirmContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#972F2F"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmContraseña" />

    <CheckBox
        android:id="@+id/checkbox_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical"
        android:padding="4dp"
        android:text="@string/HeLeido"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmContraseña" />

        <TextView
            android:id="@+id/text_privacy_policy"
            style="@style/ParagraphNegrita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/Polpriv"
            android:textColor="@color/verde_primario"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/checkbox_privacy_policy"
            app:layout_constraintEnd_toEndOf="@+id/tvConfirmContraseña"
            app:layout_constraintStart_toEndOf="@+id/checkbox_privacy_policy"
            app:layout_constraintTop_toTopOf="@+id/checkbox_privacy_policy" />

    <TextView
        android:id="@+id/accedeCon"
        style="@style/ParagraphNegro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/AccedeCon"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btnRegistro"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/btnRegistro"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistro" />

    <Button
        android:id="@+id/btnRegistro"
        style="@style/BotonVerde"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:onClick="registroCorreo"
        android:text="@string/Entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_privacy_policy"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnGoogleRegister"
        style="@style/BotonBlanco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="autentificarGoogle"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnRegistro"
        app:layout_constraintTop_toBottomOf="@+id/accedeCon"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button2"
        style="@style/BotonBlanco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnGoogleRegister"
        app:layout_constraintTop_toBottomOf="@+id/accedeCon"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button3"
        style="@style/BotonBlanco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/btnRegistro"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/accedeCon"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/logoGoogle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnGoogleRegister"
        app:layout_constraintEnd_toEndOf="@+id/btnGoogleRegister"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="@+id/btnGoogleRegister"
        app:layout_constraintTop_toTopOf="@+id/btnGoogleRegister"
        app:srcCompat="@drawable/logo_google" />

    <ImageView
        android:id="@+id/logoFacebook"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/logoX"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3"
        app:srcCompat="@drawable/logo_twitter" />

        <TextView
            android:id="@+id/respuestaRegistro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="#972F2F"
            android:textSize="10dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edtEmail"
            app:layout_constraintStart_toStartOf="@+id/edtEmail"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

    <!--

    <ImageView
        android:id="@+id/imageViewPasswordToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="14dp"
        android:contentDescription="Mostrar/Ocultar contraseña"
        android:src="@drawable/ic_visibility_eye_off"
        app:layout_constraintStart_toStartOf="@+id/edtContraseña"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    -->


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>